# data

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION_PLAN.md  README.md  TEST_COVERAGE_PLAN.md  makefile  pyproject.toml  task.md
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/workflows/: build.yml  bump-version.yml  ci.yml  quality.yml  test.yml
docs/: ARCHITECTURE_SUMMARY.md  COMPLETION_REPORT.md  INDEX.md  README.md  api.md  capabilities-api-plan.md
docs/api-reference/: capabilities.md  data-api.md  exceptions.md  models.md
docs/architecture/: capability-system.md  clients.md  design-decisions.md  io-layer.md  models.md  overview.md  provider-system.md  routing-system.md  sinks.md  streaming-architecture.md  urm-system.md
docs/examples/: basic-rest.md  basic-streaming.md  feeds.md  multi-exchange.md  relay.md
docs/guides/: advanced-usage.md  basic-usage.md  error-handling.md  getting-started.md  urm.md
docs/internals/: provider-development.md  testing.md
examples/: binance_rest_funding_rate.py  binance_rest_ohlcv.py  binance_rest_open_interest.py  binance_rest_order_book.py  binance_rest_recent_trades.py  binance_ws_bars.py  binance_ws_liquidations.py  binance_ws_ohlcv.py  binance_ws_ohlcv_multi.py  binance_ws_order_book.py  binance_ws_trades.py  data_feed_quickstart.py  hyperliquid_test_all.py  hyperliquid_test_rest.py  hyperliquid_test_websocket.py  ohlcv_feed_quickstart.py
laakhay/data/: __init__.py  registration.py
laakhay/data/api/: __init__.py  data_api.py  request_builder.py
laakhay/data/capability/: __init__.py  discovery.py  registry.py  service.py
laakhay/data/clients/: __init__.py  base_feed.py  data_feed.py  liquidation_feed.py  ohlcv_feed.py  open_interest_feed.py
laakhay/data/connectors/: __init__.py
laakhay/data/connectors/binance/: __init__.py  config.py  provider.py  urm.py
laakhay/data/connectors/bybit/: __init__.py  config.py  provider.py  urm.py
laakhay/data/connectors/coinbase/: __init__.py  config.py  provider.py  urm.py
laakhay/data/connectors/hyperliquid/: provider.py
laakhay/data/connectors/kraken/: __init__.py  config.py  constants.py  provider.py  urm.py
laakhay/data/core/: __init__.py  api.py  base.py  capabilities.py  capability_service.py  enums.py  exceptions.py  registry.py  relay.py  request.py  router.py  urm.py
laakhay/data/io/: __init__.py  rest.py  rest_runner.py  rest_transport.py  stream_runner.py  ws.py
laakhay/data/models/: __init__.py  bar.py  candle.py  events.py  ohlcv.py  order_book.py  streaming_bar.py  symbol.py
laakhay/data/providers/: __init__.py
laakhay/data/runtime/: __init__.py  provider_registry.py  relay.py  router.py
laakhay/data/sinks/: __init__.py  in_memory.py  redis.py
laakhay/data/utils/: __init__.py  http.py  websocket.py
scripts/: verify_data.py
tests/integration/: conftest.py  test_binance_funding_rate.py  test_binance_integration.py  test_binance_liquidation.py  test_binance_open_interest.py  test_provider_rest_ohlcv.py  test_provider_rest_orderbook_trades.py  test_provider_rest_symbols.py  test_provider_ws_ohlcv.py
tests/unit/: test_bar.py  test_base.py  test_binance_provider.py  test_binance_urm.py  test_capabilities.py  test_coinbase_provider.py  test_data_feed.py  test_enums.py  test_hyperliquid_provider.py  test_kraken_provider.py  test_kraken_urm.py  test_liquidation.py  test_liquidation_feed.py  test_ohlcv.py  test_ohlcv_feed.py  test_okx_provider.py  test_open_interest.py  test_order_book.py  test_series_meta.py  test_streaming_bar.py  test_urm.py  test_urm_integration.py
tests/unit/api/: test_request_builder.py
tests/unit/capability/: test_discovery.py
tests/unit/core/: test_all_exchanges_urm.py  test_api.py  test_base.py  test_capabilities.py  test_capability_service.py  test_enums.py  test_exceptions.py  test_registry.py  test_relay.py  test_request.py  test_router.py  test_urm.py  test_urm_integration.py
tests/unit/data/: test_series_meta.py
tests/unit/features/: test_funding_rate.py  test_mark_price.py  test_ohlcv.py  test_trade.py
tests/unit/feeds/: test_ohlcv_feed.py  test_open_interest_feed.py
tests/unit/infrastructure/: test_base.py  test_http.py  test_websocket.py
tests/unit/providers/: test_provider_registration.py
tests/unit/sinks/: test_in_memory.py
(+259 files in other folders)
