[build-system]
requires = [
    "setuptools>=65.0", "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "laakhay-data"
dynamic = ["version"]
description = "Data infrastructure built with ♥︎ by Laakhay"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Laakhay Corporation", email = "laakhay.corp@gmail.com"}
]
keywords = ["finance", "trading", "market-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://laakhay.com"
Repository = "https://github.com/laakhay/data"