
[build-system]
requires = [
    "setuptools>=65.0",
    "wheel",
    "setuptools-scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "laakhay-data"
dynamic = ["version"]
description = "Data infrastructure built with ♥︎ by Laakhay"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Laakhay Corporation", email = "laakhay.corp@gmail.com"}
]
keywords = ["finance", "trading", "market-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]

# Runtime dependencies for library users
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.8",
    "websockets>=10",
]

[project.urls]
Homepage = "https://laakhay.com"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["laakhay*"]
exclude = ["tests*", "*.pyc", "*.pyo", "*.pyd", "__pycache__", ".pytest_cache"]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.0.0",
    "build>=1.0",
    "twine>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools_scm]
# Default config will infer version from Git tags.
# Tag format like v1.2.3 will yield version 1.2.3
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B027",  # empty method in abstract base class without abstract decorator
    "ARG001", # unused function argument (common in abstract methods)
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B017",  # pytest.raises(Exception) is acceptable in tests
    "ARG",   # unused arguments are common in test fixtures
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["laakhay"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"


